apps/ansible/kubernetes/public.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: passport-storage
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: passport-storage
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: passport-storage
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: passport-storage
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: passport-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-storage
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: passport-storage
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/rhdevelopers/passport-storage:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: passport-storage
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: passport-storage
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: passport-storage
    weight: 100
  wildcardPolicy: None
